fixed number variant alignment issue

--- a/packages/front-end/styles/global.scss
+++ b/packages/front-end/styles/global.scss
@@ -2016,6 +2016,7 @@ main.main {
       justify-content: center;
       width: 24px;
       height: 24px;
+      line-height: 24px;
       color: var(--slate-11);
       font-weight: 600;
       border: 1.5px solid var(--slate-a11);
